# csv-converter

./: CMakeLists.txt  main.cpp  out.csv  test.csv
inc/: parsing.h
src/: main.cpp  parsing.cpp
